add pg for game

--- a/index.html
+++ b/index.html
@@ -60,22 +60,23 @@
           <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
         </div>
       </div> </a>
+      <a href="colormatch.html">
      <div class="col-lg-6 col-md-6 col-sm-12 item">
-          <img style="width:70%; display:block; margin-right:auto; margin-left:auto" src="assets/demo4.gif">
+          <img style="width:69%; display:block; margin-right:auto; margin-left:auto; margin-top:1.5em" src="assets/demo4.gif">
           <div class="overlay">
-            <div class="text_overlay" style="background-color: purple;">game concept (made with origami)</div>
+            <div class="text_overlay" style="background-color: deeppink;">game concept</div>
           </div>
-        </div>
-        <a href="https://invis.io/G4AODOVJC" target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
+        </div></a>
+        <a href="https://medium.com/@smw./case-study-parkmobile-2a37b615d8e6#.3tppv8g53" target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
           <img style="width:100%" src="assets/parkmobile.png">
           <div class="overlay">
-            <div class="text_overlay" style="background-color: deeppink;">UI prototype</div>
+            <div class="text_overlay" style="background-color: darkorange;">UX / UI redesign case study</div>
           </div>
         </div> </a>
-    <a href="https://medium.com/@smw./latest"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
+    <a href="https://medium.com/tag/spencer-ux-ui-nits/latest"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
         <img style="width:100%" src="assets/facebook_forward.png">
         <div class="overlay">
-          <div class="text_overlay" style="background-color: #FF6000;">UX/UI nits</div>
+          <div class="text_overlay" style="background-color: DeepSkyBlue ;">tiny UX/UI case studies</div>
         </div>
       </div> </a>
       <a href="resume.html"><div class="col-lg-6 col-md-6 col-sm-12 item">
@@ -85,6 +86,9 @@
         </div>
       </div></a>
     </div>
+
+
+
 
 <!--
 Hirewire
@@ -103,9 +107,7 @@ CV
     </div>
     </div>
     <div class="container-fluid">
-        <div class="col-lg-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px">
-            Made from scratch in Atlanta <3
-          </div>
+
         </div>
 
           <div class="col-sm-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-bottom:2em">
@@ -121,7 +123,9 @@ CV
   </a>
 </div>
 
-
+<div class="col-lg-12 about" style="font-size:1vw; background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; margin-bottom:2em">
+    Made from scratch in Atlanta <span style="color:red; color:red"><3</span>
+  </div>
 
 
     </div>
