--- a/resume.html
+++ b/resume.html
@@ -85,8 +85,8 @@
 </a>
 <h2 style="color:#4C40FF">Dragon Army</h2>
 <h3>2017-<br />
-dev shop jr. project manager</h3>
-<h2 style="color:#4C40FF">HireWire</h2>
+jr. project manager at a mobile dev shop</h3>
+<h2 style="color:#4C40FF">Hirewire</h2>
 <h3>2016-2017<br />
 SQL reporting and business analytics
 </h3>
