--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
     <link href="https://fonts.googleapis.com/css?family=UnifrakturCook:700" rel="stylesheet">
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-92773613-1', 'auto');
-      ga('send', 'pageview');
-
+        ga('create', 'UA-92773613-1', 'auto');
+        ga('send', 'pageview');
     </script>
 </head>
 
@@ -48,49 +54,60 @@
         </div>
     </div>
     <div class="container-fluid">
-    <a href="http://fascist.report/"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
-        <img style="width:100%" src="assets/fascistreport.png">
-        <div class="overlay">
-          <div class="text_overlay fascist" style="background-color: red;">the fascist.report</div>
-        </div>
-      </div></a>
-      <a href="hiring.html"><div class="col-lg-6 col-md-6 col-sm-12 item">
-        <img style="width:100%" src="assets/mainscreen.png">
-        <div class="overlay">
-          <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
-        </div>
-      </div> </a>
-      <a href="colormatch.html">
-     <div class="col-lg-6 col-md-6 col-sm-12 item">
-          <img style="width:69%; display:block; margin-right:auto; margin-left:auto; margin-top:1.5em" src="assets/demo4.gif">
-          <div class="overlay">
-            <div class="text_overlay" style="background-color: deeppink;">game concept</div>
-          </div>
-        </div></a>
-        <a href="https://medium.com/@smw./case-study-parkmobile-2a37b615d8e6#.3tppv8g53" target="_blank"><div class="col-lg-6 col-md-6 col-sm-12 item">
-          <img style="width:100%" src="assets/parkmobile.png">
-          <div class="overlay">
-            <div class="text_overlay" style="background-color: darkorange;">UX / UI redesign case study</div>
-          </div>
-        </div> </a>
-    <a href="https://medium.com/tag/spencer-ux-ui-nits/latest"  target="_blank">  <div class="col-lg-6 col-md-6 col-sm-12 item">
-        <img style="width:100%" src="assets/facebook_forward.png">
-        <div class="overlay">
-          <div class="text_overlay" style="background-color: DeepSkyBlue ;">tiny UX/UI case studies</div>
-        </div>
-      </div> </a>
-      <a href="resume.html"><div class="col-lg-6 col-md-6 col-sm-12 item">
-        <img style="width:100%" src="assets/resume.png">
-        <div class="overlay">
-          <div class="text_overlay" style="background-color: #971EB2;">resume</div>
-        </div>
-      </div></a>
+        <a href="http://fascist.report/" target="_blank">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:100%" src="assets/fascistreport.png">
+                <div class="overlay">
+                    <div class="text_overlay fascist" style="background-color: red;">the fascist.report</div>
+                </div>
+            </div>
+        </a>
+        <a href="hiring.html">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:100%" src="assets/mainscreen.png">
+                <div class="overlay">
+                    <div class="text_overlay" style="background-color: #4C40FF;">UI design</div>
+                </div>
+            </div>
+        </a>
+        <a href="colormatch.html">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:69%; display:block; margin-right:auto; margin-left:auto; margin-top:1.5em" src="assets/demo4.gif">
+                <div class="overlay">
+                    <div class="text_overlay" style="background-color: deeppink;">game concept</div>
+                </div>
+            </div>
+        </a>
+        <a href="https://medium.com/@smw./case-study-parkmobile-2a37b615d8e6#.3tppv8g53" target="_blank">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:100%" src="assets/parkmobile.png">
+                <div class="overlay">
+                    <div class="text_overlay" style="background-color: darkorange;">UX / UI redesign case study</div>
+                </div>
+            </div>
+        </a>
+        <a href="https://medium.com/tag/spencer-ux-ui-nits/latest" target="_blank">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:100%" src="assets/facebook_forward.png">
+                <div class="overlay">
+                    <div class="text_overlay" style="background-color: DeepSkyBlue ;">tiny UX/UI case studies</div>
+                </div>
+            </div>
+        </a>
+        <a href="resume.html">
+            <div class="col-lg-6 col-md-6 col-sm-12 item">
+                <img style="width:100%" src="assets/resume.png">
+                <div class="overlay">
+                    <div class="text_overlay" style="background-color: #971EB2;">resume</div>
+                </div>
+            </div>
+        </a>
     </div>
 
 
 
 
-<!--
+    <!--
 Hirewire
 Facebook nits
 Fascist Report
@@ -108,24 +125,25 @@ CV
     </div>
     <div class="container-fluid">
 
-        </div>
 
-          <div class="col-sm-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding-bottom:2em">
 
-            <a class="btn btn-social-icon btn-github" href="https://github.com/spencermwatts/">
-    <span class="fa fa-github fa-2x"></span>
-  </a>
-  <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/spencerwatts/">
-  <span class="fa fa-linkedin fa-2x"></span>
-  </a>
-  <a class="btn btn-facebook" href="https://www.facebook.com/spencerwatts">
-  <span class="fa fa-facebook fa-2x"></span>
-  </a>
-</div>
+    <div class="col-sm-12 about" style="background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; ">
 
-<div class="col-lg-12 about" style="font-size:1vw; background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; margin-bottom:2em">
-    Made from scratch in Atlanta <span style="color:red; color:red"><3</span>
-  </div>
+        <a class="btn btn-social-icon btn-github" href="https://github.com/spencermwatts/">
+            <span class="fa fa-github fa-2x"></span>
+        </a>
+        <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/spencerwatts/">
+            <span class="fa fa-linkedin fa-2x"></span>
+        </a>
+        <a class="btn btn-facebook" href="https://www.facebook.com/spencerwatts">
+            <span class="fa fa-facebook fa-2x"></span>
+        </a>
+    </div>
+      </div>
+
+    <div class="col-lg-12 about" style="font-size:1em; background-color:#FEFDFE; text-align:center;color:black; -webkit-box-shadow: 0px 0px; padding:2em">
+        Made from scratch in Atlanta <span style="color:red; color:red"><3</span>
+    </div>
 
 
     </div>
